# hermes

./: .env.example  .gitignore  post_now.py  pyproject.toml  setup_schedule.ps1
.github/workflows/: linkedin_autopost.yml
goals/: templates.yaml
hermas/: cli.py  client.py  config.py  content_engine.py  goals.py  image_gen.py  linkedin.py
