[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[project.scripts]
hermas = "hermas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["hermas"]
